<resources>
    <string name="app_name">PalindromoApp</string>
    <string name="home_title">Digite uma palavra e descubra se é um palíndromo</string>
    <string name="home_hint">Digite aqui</string>
    <string name="success_answer">Parabéns, a palavra %1s é um palíndromo!</string>
    <string name="failure_answer">Uma pena, a palavra %1s não é um palíndromo.</string>

    <string name="success_short_answer">É PALÍNDROMO</string>
    <string name="failure_short_answer">NÃO É</string>
    <string name="words_list_label">Histórico</string>
    <string name="clear_list_label">Limpar histórico</string>
</resources>
