<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.view.HomeActivity">

    <data>

        <variable
            name="clearHistoricoListener"
            type="com.example.palindromoapp.view.util.ClearHistoricoListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/home_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/home_palindromo_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_searchview"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/home_hint"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_resposta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_palindromo_et"
            tools:text="@string/success_answer"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/home_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_palindromo_et"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="home_progressbar,home_resposta" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/word_list_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:constraint_referenced_ids="divider,home_list_label,words_list,home_clear_button"
            tools:visibility="visible" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_list_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/words_list_label"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/home_clear_button"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> clearHistoricoListener.onClearHistoricoClicked()}"
            android:text="@string/clear_list_label"
            app:layout_constraintBottom_toBottomOf="@id/home_list_label"
            app:layout_constraintLeft_toRightOf="@id/home_list_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/home_list_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/words_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_list_label"
            app:layout_constraintVertical_bias="0"
            tools:itemCount="1"
            tools:listitem="@layout/word_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>